--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@
 .bg-transparent{
     background: transparent!important;
 }
+
+.bg-about{
+    background: url(./assets/bg/about.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 130px;
+    padding-top: 160px;
+}
