--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,41 @@
-.fs-18{
-    font-size: 18px!important;
+.fs-18 {
+    font-size: 18px !important;
 }
 
-.bg-home{
+.bg-home {
     background: url(./assets/bg/home.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
-    width: 100%!important;
-    z-index: -1!important;
+    width: 100% !important;
+    z-index: -1 !important;
 }
 
-.bg-transparent{
-    background: transparent!important;
+.bg-transparent {
+    background: transparent !important;
 }
 
-.bg-about{
+.bg-about {
     background: url(./assets/bg/about.png);
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 130px;
     padding-top: 160px;
+}
+
+.profile-active {
+    background-color: white !important;
+    color: #0D6EFD!important;
+}
+
+.profile-active-bar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: auto;
+    bottom: 0;
+    width: 5px;
+    height: 100%;
+    background-color: #0D6EFD!important;
 }
