--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
     font-size: 18px !important;
 }
 
-.fs-14{
-    font-size: 14px!important;
+.fs-14 {
+    font-size: 14px !important;
 }
 
 .bg-home {
@@ -47,4 +47,8 @@
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: white !important;
+}
+
+.placeholder1::placeholder{
+    color: #ffffff50 !important;
 }
